# rag1

./: .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml  refactor.md  requirements-dev.txt  requirements.txt
rag/: .env  .env.example  CLAUDE.md  README.md  app.py  ejecutar.md  index.html  mejoras.txt  optimizacion.md
rag/data/: __init__.py  seed_dishes.py
rag/src/api/: __init__.py  dependencies.py
rag/src/api/routers/: admin.py  health.py
rag/src/core/: __init__.py  constants.py
rag/src/models/: __init__.py  database.py
rag/src/repositories/: __init__.py  embedding_repository.py
rag/src/schemas/: __init__.py  chat.py  common.py
rag/src/services/: chat_service.py  text_service.py
rag/tests/: conftest.py
src/: __init__.py
src/api/routers/: __init__.py  chat.py  dishes.py
src/config/: settings.py
src/core/: exceptions.py
src/models/: entities.py
src/repositories/: chat_repository.py  chunk_repository.py  dish_repository.py
src/schemas/: dish.py
src/services/: __init__.py  ollama_service.py  prompt_service.py  retrieval_service.py  seed_service.py
tests/integration/: test_chat_endpoint.py
tests/unit/: test_decision_logic.py  test_prompt_service.py  test_text_service.py
